# PBWT-PARALLEL

./: 100SitesX50Haps.hap  10HapsX10Sites.hap  10HapsX20Sites.hap  10SitesX10Haps.hap  16HapsX17Sites.hap  17SitesX16Haps.hap  20HapsX30Sites.hap  20SitesX10Haps.hap  22HapsX33Sites.hap  25HapsX30Sites.hap  30SitesX20Haps.hap  30SitesX25Haps.hap  33SitesX22Haps.hap  40HapsX50Sites.hap  50HapsX100Sites.hap  50SitesX40Haps.hap  5HapsX5Sites.hap  5SitesX5Haps.hap  CMakeLists.txt  Makefile  compare_all.sh  compare_all_detailed.sh  compare_outputs.sh  compare_positions.sh  haps.txt  pbwt-haps.cpp  pbwt-haps.h  pbwt-single.cpp  pbwt-sites.cpp  pbwt.cpp  pbwt.h  pbwt_1.cpp  randomizer.cpp  readme.md  res  run.txt  single.txt  sites.txt  util.cpp  util.h  (+1 more)
